# CRUSOE-SOCarbon

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
notebooks/: 1.1_P1_coreArgo_feature_prep.ipynb  1.2_P1_bgcArgo_feature_prep.ipynb  1.3_P1_socat_features_with_colocation.ipynb  README.md  data_loader.py
src/: 0.3_DataProcessing_AllArgo.ipynb  0.4_DataProcessing_BGC-Argo.ipynb  0.5_Diagnostic_SOCATv2024.ipynb  0._DataSummary.ipynb  1.0_pca_gmm.ipynb  1.1_P1_coreArgo_feature_processing.ipynb  1.1_pcm_fit_coreArgo.ipynb  1.2_P1_bgcArgo_feature_processing.ipynb  1.2_P1_socat_features_with_colocation.ipynb  1.2_pcm_classify_bgcArgo_ship.ipynb  2.0_RUN_Preprocessing.ipynb  2.0_process_pco2_data.ipynb  2.0_regression_rfr_example.ipynb  2.1_add_adt_features.ipynb  2.1_process_pco2_data.ipynb  2.2_PCM_classify_P1processed_bgcArgo_socat.ipynb  3.2_kfold_clustered_RFR.ipynb  DataProcessing_SOCATv2024.ipynb  README.md  RUN_Clustering.ipynb  Untitled-1.ipynb  data_xco2atm_globalview.ipynb  dev-mapping-combined-platforms.ipynb  dev_2.1_process_pco2_data.ipynb  dev_2.2_add_adt_features.ipynb  dev_2.2_add_coreArgo_mld_adt.ipynb  dev_climatedatastore.ipynb  dev_era5_winds_processing.ipynb  dev_marineboundarylayer.ipynb  dev_nested_crossvalidation.ipynb  dev_pcm_classify_bgcArgo_ship.ipynb  dev_solar_radiation.ipynb  dev_variable_distributions.ipynb  example_argopy.ipynb  figs_datadistributions.py  figs_pcm.py  figs_regression.py  marineboundarylayer.ipynb  mod_argo.py  mod_cremas.py  (+16 more)
x_development/: dev_3.2_kfold_clustered_RFR.ipynb  (+1 more)
(+22 files in other folders)
